<resources>
    <string name="app_name">Medi Pal</string>
    <string name="log_in_txt">Log In</string>
    <string name="email_txt">Email</string>
    <string name="password_txt">Password</string>
    <string name="medipal_icon_txt">MediPal Icon</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="not_yet_registered_txt">Not yet registered?</string>
    <string name="create_account_txt"><u>Create Account</u></string>
    <string name="patient_selector_txt">I am a Patient</string>
    <string name="doctor_selector_txt">I am a Doctor</string>
    <string name="doctor_icon_txt">Doctor Icon</string>
    <string name="patient_icon_txt">Patient Icon</string>
    <string name="name_txt">Name</string>
    <string name="nic_txt">NIC</string>
    <string name="birthday_txt">Birthday</string>
    <string name="mobile_txt">Mobile</string>
    <string name="emergency_contact_txt">Emergency Contact</string>
    <string name="re_enter_password_txt">Re-Enter Password</string>
    <string name="gender_txt">Gender</string>
    <string name="male_txt">Male</string>
    <string name="female_txt">Female</string>
    <string name="add_profile_image_icon_txt">add_profile_image_icon</string>
    <string name="sign_up_txt">Sign Up</string>
    <string name="register_header_txt">We would like to know about you...</string>
    <string name="registration_id_txt">Registration ID</string>
    <string name="speciality_txt">Speciality</string>
    <string name="account_txt">Account</string>
    <string name="settings_txt">Settings</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="doctor_name_txt">Doctor Name</string>
    <string name="patient_name_txt">Patient Name</string>
    <string name="view_more"><![CDATA[View More >]]></string>
    <string name="username_txt">Username</string>
    <string name="no_patient_txt">You currently don\'t have any patient</string>
    <string name="remove_patient_txt">Remove Patient</string>
    <string name="hide_patient_txt">Hide Patient</string>
    <string name="view_profile_txt">View Profile</string>
    <string name="view_less"> &lt; View Less</string>
    <string name="txt_current_medications">Current Medications</string>
    <string name="condition_txt">Condition</string>
    <string name="txt_select_a_medicine">Select a Medicine</string>
    <string name="txt_prescribing_for">Prescribing for</string>
    <string name="txt_unit_size">Unit Size</string>
    <string name="unit_s">Unit(s)</string>
    <string name="txt_dosage">Dosage</string>
    <string name="txt_frequency">Frequency</string>
    <string name="txt_duration">Duration</string>
    <string name="txt_show_alternatives">Show Alternatives</string>
</resources>
