<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="lk.ac.mrt.cse.medipal.view.LoginActivity">

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <ImageView
            android:id="@+id/icon_medipal"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/medipal_icon_txt"
            android:src="@drawable/medipal_logo"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="30dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon_medipal"
            android:layout_alignParentBottom="true">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/email_txt"
                android:inputType="textEmailAddress"
                app:met_autoValidate="true"
                app:met_baseColor="@color/met_baseColor"
                app:met_clearButton="true"
                app:met_errorColor="@color/met_errorColor"
                app:met_floatingLabel="highlight"
                app:met_helperText="name@host.com"
                app:met_iconLeft="@drawable/icon_email"
                app:met_primaryColor="@color/met_primaryColor"
                app:met_singleLineEllipsis="true"
                app:met_textColor="@color/met_textColor"
                android:layout_centerHorizontal="true"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_email"
                android:layout_gravity="center"
                android:hint="@string/password_txt"
                android:inputType="textPassword"
                app:met_autoValidate="true"
                app:met_baseColor="@color/met_baseColor"
                app:met_clearButton="true"
                app:met_errorColor="@color/met_errorColor"
                app:met_floatingLabel="highlight"
                app:met_helperText="Your account password"
                app:met_iconLeft="@drawable/icon_password"
                app:met_primaryColor="@color/met_primaryColor"
                app:met_singleLineEllipsis="true"
                app:met_textColor="@color/met_textColor"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/text_forgot_password"
                android:layout_below="@id/input_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/forgot_password"
                android:textStyle="italic"
                />
            <Button
                android:layout_below="@id/text_forgot_password"
                android:layout_centerHorizontal="true"
                android:id="@+id/btn_login"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimaryDark"
                android:padding="10dp"
                android:text="@string/log_in_txt"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />
            <RelativeLayout
                android:id="@+id/layout_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_login"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true">
                <TextView
                    android:id="@+id/text_not_a_member"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_yet_registered_txt"
                    />
                <TextView
                    android:layout_marginLeft="5dp"
                    android:id="@+id/text_create_account"
                    android:layout_toRightOf="@id/text_not_a_member"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account_txt"
                    android:textStyle="italic"
                    />
            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
