<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:id="@+id/activity_patient_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="lk.ac.mrt.cse.medipal.view.patient.PatientRegisterActivity">
        <TextView
            android:id="@+id/text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_header_txt"
            android:textSize="25sp"
            android:textColor="@color/met_baseColor"
            android:gravity="center"
            android:padding="20dp" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_below="@id/text_header"
            android:id="@+id/image_add_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:contentDescription="@string/add_profile_image_icon_txt"
            android:src="@drawable/icon_add_user_image"
            app:civ_border_width="2dp"
            app:civ_border_color="#FFFFFFFF"/>

        <GridLayout
            android:id="@+id/layout_grid_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_add_picture"
            android:columnCount="1"
            android:rowCount="5">
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/input_reg_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:hint="@string/registration_id_txt"
                android:inputType="text"
                app:met_autoValidate="true"
                app:met_baseColor="@color/met_baseColor"
                app:met_clearButton="true"
                app:met_errorColor="@color/met_errorColor"
                app:met_floatingLabel="highlight"
                app:met_helperText="Medical Council Registration"
                app:met_iconLeft="@drawable/icon_name"
                app:met_primaryColor="@color/met_primaryColor"
                app:met_singleLineEllipsis="true"
                app:met_textColor="@color/met_textColor" />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/input_speciality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:hint="@string/speciality_txt"
                android:inputType="text"
                app:met_autoValidate="true"
                app:met_baseColor="@color/met_baseColor"
                app:met_clearButton="true"
                app:met_errorColor="@color/met_errorColor"
                app:met_floatingLabel="highlight"
                app:met_helperText="Field of Specialization"
                app:met_iconLeft="@drawable/icon_name"
                app:met_primaryColor="@color/met_primaryColor"
                app:met_singleLineEllipsis="true"
                app:met_textColor="@color/met_textColor" />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:hint="@string/name_txt"
                android:inputType="text"
                app:met_autoValidate="true"
                app:met_baseColor="@color/met_baseColor"
                app:met_clearButton="true"
                app:met_errorColor="@color/met_errorColor"
                app:met_floatingLabel="highlight"
                app:met_helperText="(First Name) (Last Name)"
                app:met_iconLeft="@drawable/icon_name"
                app:met_primaryColor="@color/met_primaryColor"
                app:met_singleLineEllipsis="true"
                app:met_textColor="@color/met_textColor" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/input_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:hint="@string/gender_txt"
                    android:inputType="text"
                    android:text="@string/gender_txt"
                    android:layout_marginRight="10dp"
                    app:met_autoValidate="true"
                    app:met_baseColor="@color/met_baseColor"
                    app:met_clearButton="true"
                    app:met_errorColor="@color/met_errorColor"
                    app:met_floatingLabel="highlight"
                    app:met_iconLeft="@drawable/icon_gender"
                    app:met_primaryColor="@color/met_primaryColor"
                    app:met_singleLineEllipsis="true"
                    app:met_textColor="@color/met_textColor"
                    />

                <RadioGroup
                    android:paddingTop="8dp"
                    android:id="@+id/layout_radio_gender"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_toEndOf="@id/input_gender"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_male"
                        android:buttonTint="@color/met_baseColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="start|center"
                        android:padding="5dp"
                        android:textColor="@color/met_baseColor"
                        android:text="@string/male_txt"
                        />

                    <RadioButton
                        android:id="@+id/radio_female"
                        android:buttonTint="@color/met_baseColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="start|center"
                        android:padding="5dp"
                        android:textColor="@color/met_baseColor"
                        android:text="@string/female_txt" />
                </RadioGroup>
            </RelativeLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:hint="@string/email_txt"
                android:inputType="textEmailAddress"
                app:met_autoValidate="true"
                app:met_baseColor="@color/met_baseColor"
                app:met_clearButton="true"
                app:met_errorColor="@color/met_errorColor"
                app:met_floatingLabel="highlight"
                app:met_helperText="name@host.com"
                app:met_iconLeft="@drawable/icon_email"
                app:met_primaryColor="@color/met_primaryColor"
                app:met_singleLineEllipsis="true"
                app:met_textColor="@color/met_textColor" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/input_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:hint="@string/mobile_txt"
                android:inputType="phone"
                app:met_autoValidate="true"
                app:met_baseColor="@color/met_baseColor"
                app:met_clearButton="true"
                app:met_errorColor="@color/met_errorColor"
                app:met_floatingLabel="highlight"
                app:met_helperText="07XXXXXXXX"
                app:met_iconLeft="@drawable/icon_mobile"
                app:met_primaryColor="@color/met_primaryColor"
                app:met_singleLineEllipsis="true"
                app:met_textColor="@color/met_textColor" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:hint="@string/password_txt"
                android:inputType="textPassword"
                app:met_autoValidate="true"
                app:met_baseColor="@color/met_baseColor"
                app:met_clearButton="true"
                app:met_errorColor="@color/met_errorColor"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@drawable/icon_password"
                app:met_primaryColor="@color/met_primaryColor"
                app:met_singleLineEllipsis="true"
                app:met_textColor="@color/met_textColor" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/input_reenter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:hint="@string/re_enter_password_txt"
                android:inputType="textPassword"
                app:met_autoValidate="true"
                app:met_baseColor="@color/met_baseColor"
                app:met_clearButton="true"
                app:met_errorColor="@color/met_errorColor"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@drawable/icon_reenter_password"
                app:met_primaryColor="@color/met_primaryColor"
                app:met_singleLineEllipsis="true"
                app:met_textColor="@color/met_textColor" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimaryDark"
                android:padding="10dp"
                android:text="@string/sign_up_txt"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </GridLayout>
    </RelativeLayout>
</ScrollView>