<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_type_selection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="lk.ac.mrt.cse.medipal.view.UserTypeSelectionActivity">
    <LinearLayout
        android:id="@+id/layout_patient_selector"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:background="@drawable/rounded_login_patient_btn"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="30dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:src="@drawable/icon_patient"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/patient_icon_txt"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/patient_selector_txt"
            android:layout_gravity="center_horizontal"
            android:textSize="40sp"
            android:textStyle="bold"
            android:gravity="top"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_doctor_selector"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:background="@drawable/rounded_login_doctor_btn"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="30dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:src="@drawable/icon_doctor"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/patient_icon_txt"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/doctor_selector_txt"
            android:layout_gravity="center_horizontal"
            android:textSize="40sp"
            android:textStyle="bold"
            android:gravity="top"
            />

    </LinearLayout>

</LinearLayout>
